Fixes horizontal overflow issue
Addresses an issue where horizontal scrolling was occurring on the page.

Applies `overflow-x: hidden` to the `html`, `body`, and `.combinadorContainer` to prevent unwanted horizontal scrolling and improve the user experience.

--- a/src/components/Combinador.module.scss
+++ b/src/components/Combinador.module.scss
@@ -1,5 +1,11 @@
 @use "../assets/variables" as *;
 @use "../assets/mixins" as *;
+html, body {
+  overflow-x: hidden !important;
+}
+body {
+  overflow-x: hidden;
+}
 .carouselGroup {
   display: flex;
   flex-direction: column;
@@ -30,6 +36,7 @@
   text-align: center;
   width: 100vw;
   max-width: 100vw;
+  overflow-x: hidden;
 }
 .combinadorContainer h2 {
   font-family: 'Jersey 15', $font-main;
